--- a/mysite/pedro/analise.ipynb
+++ b/mysite/pedro/analise.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Análise a respeito do número de funcionários"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importando bibliotecas necessárias:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Base de dados:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +190,7 @@
        "4              459.0         04:40:42           15:31:53  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,8 +212,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quais setores têm a maior e a menor média de funcionários por empresa?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como observado na tabela e no gráfico abaixo, o setor Cozinha tem a maior média de funcionários por empresa e o setor Papelaria tem a menor média de funcionários por empresa."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +342,7 @@
        "Cozinha                    535.080000  48.930000         523.630000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -325,10 +360,6 @@
     }
    ],
    "source": [
-    "# Quais setores têm a maior e a menor média de funcionários por empresa?\n",
-    "\n",
-    "# R = Como observado na tabela abaixo, o setor Cozinha tem a maior média de funcionários por empresa e o setor Papelaria tem a menor média de funcionários por empresa.\n",
-    "\n",
     "setor_media = empresa.groupby(['setor']).mean().sort_values(by='n_funcionario')\n",
     "Setores = [\"Papelaria\",\"Farmácia\",\"Alimentação\",\"Esportes\",\"Vestuário\",\"Material de construção\",\"Eletrodomésticos\",\"Música\",\"Mobília\",\"Cozinha\"]\n",
     "Média = [479.042,484.222,484.920,489.159,489.692,513.663,518.474,525.857,528.704,535.080]\n",
@@ -347,8 +378,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quais estados têm a maior e a menor média de funcionários por empresa?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como observado na tabela e no gráfico abaixo, Espírito Santo tem a maior média de funcionários por empresa e Amapá tem a menor média de funcionários por empresa."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +627,7 @@
        "ES         615.750000  45.250000         596.187500"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -600,10 +645,6 @@
     }
    ],
    "source": [
-    "# Quais estados têm a maior e a menor média de funcionários por empresa?\n",
-    "\n",
-    "# R = Como observado na tabela abaixo, Espírito Santo tem a maior média de funcionários por empresa e Amapá tem a menor média de funcionários por empresa.\n",
-    "\n",
     "estado_media = empresa.groupby(['estado']).mean().sort_values(by='n_funcionario')\n",
     "\n",
     "Siglas = [\"AP\",\"DF\",\"AC\",\"PE\",\"GO\",\"SE\",\"AM\",\"PR\",\"PB\",\"RN\",\"MA\",\"MT\",\"MG\",\"SC\",\"RS\",\"PA\",\"SP\",\"RO\",\"MS\",\"TO\",\"RJ\",\"RR\",\"AL\",\"PI\",\"BA\",\"CE\",\"ES\"]\n",
@@ -620,8 +661,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quais setores têm a maior e a menor quantidade de funcionários?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como observado na tabela e no gráfico abaixo, o setor Mobília tem a maior quantidade de funcionários e o setor Alimentação tem a menor quantidade de funcionários."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +791,7 @@
        "Mobília                       55514.0     4822.0            50487.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -754,10 +809,6 @@
     }
    ],
    "source": [
-    "# Quais setores têm a maior e a menor quantidade de funcionários?\n",
-    "\n",
-    "# R = Como observado na tabela abaixo, o setor Mobília tem a maior quantidade de funcionários e o setor Alimentação tem a menor quantidade de funcionários.\n",
-    "\n",
     "setor_soma = empresa.groupby(by='setor').sum().sort_values(by='n_funcionario')\n",
     "\n",
     "Setores = [\"Alimentação\",\"Papelaria\",\"Material de construção\",\"Eletrodomésticos\",\"Vestuário\",\"Música\",\"Farmácia\",\"Cozinha\",\"Esportes\",\"Mobília\"]\n",
@@ -774,8 +825,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quais estados têm a maior e a menor quantidade de funcionários?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como observado na tabela e no gráfico abaixo, Minas Gerais tem a maior quantidade de funcionários e Amapá tem a menor quantidade de funcionários."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1074,7 @@
        "MG            70611.0     7634.0            71115.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1027,10 +1092,6 @@
     }
    ],
    "source": [
-    "# Quais estados têm a maior e a menor quantidade de funcionários?\n",
-    "\n",
-    "# R = Como observado na tabela e no gráfico abaixo, Minas Gerais tem a maior quantidade de funcionários e Amapá tem a menor quantidade de funcionários.\n",
-    "\n",
     "estado_soma = empresa.groupby(by='estado').sum().sort_values(by='n_funcionario')\n",
     "\n",
     "Estados = [\"AP\",\"DF\",\"AC\",\"RR\",\"RO\",\"SE\",\"AM\",\"MS\",\"TO\",\"RJ\",\"ES\",\"AL\",\"PA\",\"PE\",\"MA\",\"GO\",\"CE\",\"MT\",\"PB\",\"PI\",\"RN\",\"SC\",\"PR\",\"BA\",\"RS\",\"SP\",\"MG\"]\n",
@@ -1045,13 +1106,6 @@
     "\n",
     "estado_soma"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
